--- a/styles/style.css
+++ b/styles/style.css
@@ -33,6 +33,8 @@
 }
 
 .header__title {
+  margin-top: 0;
+  margin-bottom: 0;
   display: flex;
   width: 730px;
   margin-left: 64px;
@@ -44,6 +46,8 @@
 }
 
 .header__subtitle {
+  margin-top: 0;
+  margin-bottom: 0;
   position: absolute;
   width: 388px;
   left: 64px;
@@ -109,6 +113,7 @@
   font-weight: normal;
   color: #2f80ed;
   margin-top: 0;
+  margin-bottom: 0;
 }
 
 .two-columns__main-text {
@@ -121,7 +126,8 @@
   line-height: 34px;
   font-size: 24px;
   font-weight: normal;
-  margin-bottom: 30px;
+  margin-bottom: 0;
+  margin-top: 30px;
 }
 
 .two-columns__paragraph:first-of-type {
@@ -188,18 +194,15 @@
   line-height:  1.2;
   font-size: 18px;
   font-weight: normal;
-  margin-bottom: 20px;
+  margin-bottom: 0;
   margin-top: 20px;
 }
 
-.table__text:last-of-type {
-  margin-bottom: 0;
-}
 
 .feynman {
   position: relative;
   background-color: #f2f2f2;
-  height: 890px;
+  min-height: 890px;
 }
 
 .feynman__title {
@@ -308,10 +311,13 @@
 
 .kaufman__triangle {
   position: absolute;
+  background-image: url("../images/kaufman-triangle.svg");
+  background-size: contain;
   right: -210px;
   top: 0;
   width: 877px;
   height: 877px;
+  z-index: 0;
 }
 
 .footer {
@@ -381,16 +387,13 @@
   margin-top: 20px;
 }
 
-li {
-  list-style-type: none; 
-}
-
-ul {
+.footer__column-links {
+  list-style-type: none;
   margin: 0;
   padding: 0;
 }
 
-a {
+.footer__link {
   color: #f2f2f2;
   text-decoration: none;
 }
