--- a/styles/style.css
+++ b/styles/style.css
@@ -1,14 +1,15 @@
+/*
 .page {
   min-width: 1100px;
-  /* мы ещё не умеем делать мобильную версию сайта, */
-  /* поэтому выше установлена минимальная ширина страницы */
   max-width: 1600px;
-  /* выше установили ограничение по максимальной ширине */
   margin: 0 auto;
-  /* выше для экранов больше 1600px отцентрировали весь контент */
   font-family: 'Helvetica Neue', Arial, sans-serif;
 }
+*/
 
+
+
+/*
 .header {
   position: relative;
   display: flex;
@@ -17,21 +18,26 @@
   max-height: 756px;
   background-color: #f2f2f2;
   align-items: center;
-  /* выше установили ограничения для секции */
 }
+*/
 
+/*
 .logo {
   width: 228px;
   height: 32px;
 }
+*/
 
+/*
 .logo_place_header {
   position: absolute;
   top: 30px;
   left: 64px;
   z-index: 3;
 }
+*/
 
+/*
 .header__title {
   margin-top: 0;
   margin-bottom: 0;
@@ -44,7 +50,9 @@
   color: #000000;
   z-index: 3;
 }
+*/
 
+/*
 .header__subtitle {
   margin-top: 0;
   margin-bottom: 0;
@@ -58,12 +66,16 @@
   z-index: 3;
   color: #000000;
 }
+*/
 
+/*
 .header__link {
   color: #2f80ed;
   text-decoration: none;
 }
+*/
 
+/*
 .header__main-illustration {
   position: absolute;
   right: 0;
@@ -73,8 +85,9 @@
   object-fit: cover;
   z-index: 2;
 }
+*/
 
-/* ниже мы привели пример двух селекторов, чтобы вы вспомнили запись элемента */
+/* ниже мы привели пример двух селекторов, чтобы вы вспомнили запись элемента 
 .header__square-pic {
   position: absolute;
   background-color: #2f80ed;
@@ -84,6 +97,7 @@
   height: 568px;
   z-index: 1;
 }
+*/
 
 /* и элемента с модификатором вида ключ-значение 
 .table__cell_theme_dark {
@@ -94,19 +108,24 @@
 }
 */
 
+/*
 .description {
   display: flex;
   margin-top: 100px;
   margin-bottom: 100px;
   justify-content: center;
 }
+*/
 
+/*
 .two-columns {
   display: flex;
   width: 80%;
   justify-content: space-between;
 }
+*/
 
+/*
 .two-columns__brief {
   width: 175px;
   line-height: 1.2;
@@ -116,13 +135,17 @@
   margin-top: 0;
   margin-bottom: 0;
 }
+*/
 
+/*
 .two-columns__main-text {
   width: 80%;
   min-width: 784px;
   color: #000000;
 }
+*/
 
+/*
 .two-columns__paragraph {
   line-height: 34px;
   font-size: 24px;
@@ -130,22 +153,30 @@
   margin-bottom: 0;
   margin-top: 30px;
 }
+*/
 
+/*
 .two-columns__paragraph:first-of-type {
   margin-top: 0;
 }
+*/
 
+/*
 .two-columns__span-accent {
   line-height: 34px;
   font-size: 24px;
   font-weight: 700;
 }
+*/
 
+/*
 .digits {
   margin-top: 0;
   margin-bottom: 100px;
 }
+*/
 
+/*
 .section-title {
   margin: 0 auto;
   text-align: center;
@@ -155,7 +186,9 @@
   font-weight: 700;
   color: #000000;
 }
+*/
 
+/*
 .section-subtitle {
   margin: 0 auto;
   text-align: center;
@@ -166,7 +199,9 @@
   font-weight: normal;
   color: #000000;
 }
+*/
 
+/*
 .table {
   display: flex;
   flex-wrap: wrap;
@@ -176,21 +211,26 @@
   width: 1100px;
   color: #000000;
 }
+*/
 
+/*
 .table__cell {
   width: 250px;
   margin-bottom: 0;
   margin-top: 60px;
 }
+*/
 
-
+/*
 .table__heading {
   line-height: 1.15;
   font-size: 24px;
   font-weight: 700;
   margin: 0;
 }
+*/
 
+/*
 .table__text {
   line-height:  1.2;
   font-size: 18px;
@@ -198,14 +238,17 @@
   margin-bottom: 0;
   margin-top: 20px;
 }
+*/
 
-
+/*
 .feynman {
   position: relative;
   background-color: #f2f2f2;
   min-height: 890px;
 }
+*/
 
+/*
 .feynman__title {
   position: relative;
   width: 648px;
@@ -218,7 +261,9 @@
   z-index: 1;
   color: #000000;
 }
+*/
 
+/*
 .feynman__subtitle {
   position: relative;
   line-height: 51px;
@@ -230,7 +275,9 @@
   text-align: center;
   color: #000000;
 }
+*/
 
+/*
 .feynman__link {
   position: absolute;
   top: 50%;
@@ -242,7 +289,9 @@
   z-index: 1;
   text-decoration: none;
 }
+*/
 
+/*
 .feynman__main-illustration {
   position: absolute;
   width: 867px;
@@ -250,7 +299,9 @@
   bottom: 0;
   left: 0;
 }
+*/
 
+/*
 .kaufman {
   background-color: #1f1f1f;
   overflow: hidden;
@@ -258,7 +309,9 @@
   padding-top: 90px;
   padding-bottom: 90px;
 }
+*/
 
+/*
 .section-title_theme-dark {
   position: relative;
   color: #f2f2f2;
@@ -269,7 +322,9 @@
   width: 60%;
   z-index: 1;
 }
+*/
 
+/*
 .section-subtitle_theme-dark {
   position: relative;
   color: #f2f2f2;
@@ -280,12 +335,16 @@
   margin-top: 20px;
   z-index: 1;
 }
+*/
 
+/*
 .table_theme_dark {
   margin: auto;
   z-index: 1;
 }
+*/
 
+/*
 .table__heading_theme-dark {
   position: relative;
   color: #f2f2f2;
@@ -294,7 +353,9 @@
   font-weight: 700;
   z-index: 1;
 }
+*/
 
+/*
 .table__text_theme-dark {
   position: relative;
   color: #f2f2f2;
@@ -304,13 +365,17 @@
   z-index: 1;
   margin-top: 20px;
 }
+*/
 
+/*
 .table__cell_theme-dark {
   width: 200px;
   margin-bottom: 0;
   margin-top: 80px;
 }
+*/
 
+/*
 .kaufman__triangle {
   position: absolute;
   background-image: url("../images/kaufman-triangle.svg");
@@ -321,13 +386,17 @@
   height: 877px;
   z-index: 0;
 }
+*/
 
+/*
 .footer {
   display: flex;
   min-height: 350px;
   background-color: #1f1f1f;
 }
+*/
 
+/*
 .footer__columns {
   display: flex;
   width: 90%;
@@ -336,24 +405,35 @@
   margin-top: 60px;
   margin-bottom: 40px;
 }
+*/
 
+/*
 .footer__column {
   display: flex;
   flex-direction: column;
   justify-content: space-between;
 }
+*/
+
+/*
 .footer__column_content-copyright {
   flex-basis: 711px;
 }
+*/
 
+/*
 .footer__column_content-info {
   justify-content: flex-start;
 }
+*/
 
+/*
 .footer__column_content-social {
   justify-content: flex-start;
 }
+*/
 
+/*
 .logo_place_footer {
   display: flex;
   width: 228px;
@@ -361,7 +441,9 @@
   left: 0;
   top: 0;
 }
+*/
 
+/*
 .footer__author {
   bottom: 0;
   left: 0;
@@ -372,7 +454,9 @@
   font-size: 18px;
   font-weight: normal;
 }
+*/
 
+/*
 .footer__column-heading {
   color: #f2f2f2;
   line-height: 30px;
@@ -380,7 +464,9 @@
   font-weight: 700;
   margin: 0;
 }
+*/
 
+/*
 .footer__column-links {
   color: #f2f2f2;
   line-height: 30px;
@@ -391,18 +477,25 @@
   margin-top: 20px;
   padding: 0;
 }
+*/
 
+/*
 .footer__column-link {
   color: #f2f2f2;
   text-decoration: none;
 }
+*/
 
+/*
 .footer__column-links:last-of-type {
   margin-bottom: 16px;
 }
+*/
 
+/*
 .footer__social-icon {
   width: 16px;
   height: 16px;
   margin-right: 10px;
 } 
+*/
