--- a/blocks/section-subtitle/section-subtitle.css
+++ b/blocks/section-subtitle/section-subtitle.css
@@ -1,7 +1,8 @@
 .section-subtitle {
   margin: 0 auto;
   text-align: center;
-  width: 60%;
+  max-width: 60%;
+  width: 100%;
   margin-top: 20px;
   line-height: 34px;
   font-size: 24px;
