--- a/blocks/table/table.css
+++ b/blocks/table/table.css
@@ -4,6 +4,8 @@
   justify-content: space-between;
   align-content: space-between;
   margin: 0 auto;
+  list-style-type: none;
+  padding: 0;
   width: 1100px;
   color: #000000;
 }
